patching for rails3 deploy; new rackishness

--- a/files-ws/tmpl/htaccess.tmpl
+++ b/files-ws/tmpl/htaccess.tmpl
@@ -11,6 +11,6 @@ SetEnv MULTIDBCONFIG databases
 
 PassengerAppRoot /usr/cldstr/wagn.org/wagn/ws/web
 
-RailsEnv e${appconfig.appconfigid}
-RailsBaseURI ${appconfig.context}
+RackEnv e${appconfig.appconfigid}
+RackBaseURI ${appconfig.context}
 
