--- a/files-ws/tmpl/database.yml.tmpl
+++ b/files-ws/tmpl/database.yml.tmpl
@@ -1,8 +1,7 @@
-e${appconfig.appconfigid}:
+${appconfig.appconfigid}:
   adapter: mysql
   username: ${appconfig.roles.db.dbuser}
   password: ${appconfig.roles.db.dbusercredential squote}
   host: ${appconfig.roles.db.privateipaddress}
   secret: YrDO${appconfig.appconfigid}${appconfig.roles.db.dbname}${appconfig.roles.db.dbuser}
   database: ${appconfig.roles.db.dbname}
-  session_key: wagn_${appconfig.appconfigid}
