getting rid of templated env files

--- a/files-ws/tmpl/database.yml.tmpl
+++ b/files-ws/tmpl/database.yml.tmpl
@@ -1,4 +1,4 @@
-${appconfig.appconfigid}:
+cloudstore:
   adapter: mysql
   username: ${appconfig.roles.db.dbuser}
   password: ${appconfig.roles.db.dbusercredential squote}
