--- a/files-ws/tmpl/htaccess.tmpl
+++ b/files-ws/tmpl/htaccess.tmpl
@@ -1,24 +1,29 @@
-# General Apache options
-Options +FollowSymLinks
-#Options +ExecCGI
 # MultiViews not compatible with Passenger
 Options -MultiViews
 
+# we make heavy use of symlinks.  this is important
+Options +FollowSymLinks
 
+# for ruby-inline gem
 SetEnv INLINEDIR /usr/cldstr/wagn.org/wagn/ws/web/tmp/
-#SetEnv MULTIDBCONFIG databases
+
+# for uuid gem.  might be better to configure a file?  
+# this is used in a custom initializer in wagn
 SetEnv UUID_STATE_FILE off
+
+# used in wagn environment configuration to set database / log
+SetEnv CLDSTR_APPCONFIG_ID ${appconfig.appconfigid}
 
 # This is a symlink to the actual AppRoot at /usr/cldstr/wagn.org/wagn/ws/web
 # Without this, passenger knows all apps share the same root and treats them as one instance,
 # screwing up the env variables that need to be different for each
 # in Passenger 3 this is addressable with PassengerAppGroupName
+PassengerAppRoot /var/cldstr/wagn.org/wagn/ws/${appconfig.appconfigid}/web
 
-PassengerAppRoot /usr/cldstr/wagn.org/wagn/ws/rootlinks/${appconfig.appconfigid}
+# This sets Rails.env 
+RackEnv cloudstore 
 
-RackEnv ${appconfig.appconfigid}
+# RackBaseURI is what sets the relative root for the app
+# it sets Rails env var RAILS_RELATIVE_URL_ROOT
 RackBaseURI ${appconfig.context}
-
-# RackBaseURI automatically sets the following
-# SetEnv RAILS_RELATIVE_URL_ROOT ${appconfig.context}
 
