uploads and new initialization

--- a/files-ws/tmpl/database.yml.tmpl
+++ b/files-ws/tmpl/database.yml.tmpl
@@ -1,7 +1,7 @@
-cloudstore:
+production:
   adapter: mysql
-  username: ${appconfig.roles.db.dbuser}
-  password: ${appconfig.roles.db.dbusercredential squote}
+  username: ${appconfig.roles.db.dbuser.maindb}
+  password: ${appconfig.roles.db.dbusercredential.maindb}
   host: ${appconfig.roles.db.privateipaddress}
-  secret: YrDO${appconfig.appconfigid}${appconfig.roles.db.dbname}${appconfig.roles.db.dbuser}
-  database: ${appconfig.roles.db.dbname}
+  secret: YrDO${appconfig.appconfigid}${appconfig.roles.db.dbname.maindb}${appconfig.roles.db.dbuser.maindb}
+  database: ${appconfig.roles.db.dbname.maindb}
