--- a/files-ws/tmpl/htaccess.tmpl
+++ b/files-ws/tmpl/htaccess.tmpl
@@ -4,15 +4,12 @@ Options -MultiViews
 # we make heavy use of symlinks.  this is important
 Options +FollowSymLinks
 
-# for ruby-inline gem
-SetEnv INLINEDIR /usr/cldstr/wagn.org/wagn/ws/web/tmp/
-
 # for uuid gem.  might be better to configure a file?  
 # this is used in a custom initializer in wagn
 SetEnv UUID_STATE_FILE off
 
-# used in wagn environment configuration to set database / log
-SetEnv CLDSTR_APPCONFIG_ID ${appconfig.appconfigid}
+# wagn.yml file sets upload dir, database config file, log file, etc
+SetEnv WAGN_CONFIG_FILE /var/cldstr/wagn.org/wagn/ws/${appconfig.appconfigid}/wagn.yml
 
 # This is a symlink to the actual AppRoot at /usr/cldstr/wagn.org/wagn/ws/web
 # Without this, passenger knows all apps share the same root and treats them as one instance,
@@ -21,7 +18,7 @@ SetEnv CLDSTR_APPCONFIG_ID ${appconfig.appconfigid}
 PassengerAppRoot /var/cldstr/wagn.org/wagn/ws/${appconfig.appconfigid}/web
 
 # This sets Rails.env 
-RackEnv cloudstore 
+#RackEnv cloudstore 
 
 # RackBaseURI is what sets the relative root for the app
 # it sets Rails env var RAILS_RELATIVE_URL_ROOT
