--- a/files-ws/tmpl/wagn.yml.tmpl
+++ b/files-ws/tmpl/wagn.yml.tmpl
@@ -1,3 +1,5 @@
-upload_storage_dir: /var/cldstr/wagn.org/wagn/ws/${appconfig.appconfigid}/files
+attachment_storage_dir: /var/cldstr/wagn.org/wagn/ws/${appconfig.appconfigid}/files
 database_config_file: /var/cldstr/wagn.org/wagn/ws/${appconfig.appconfigid}/database.yml
 log_file: /var/log/cldstr+wagn.org+wagn+ws/${appconfig.appconfigid}.log
+smtp:
+	address: ${site.hostname}
