--- a/wagn/files-ws/tmpl/wagn.yml.tmpl
+++ b/wagn/files-ws/tmpl/wagn.yml.tmpl
@@ -1,4 +1,5 @@
 attachment_storage_dir: /var/cldstr/wagn.org/wagn/ws/${appconfig.appconfigid}/files
+cache_store: mem_cache_store
 database_config_file: /var/cldstr/wagn.org/wagn/ws/${appconfig.appconfigid}/database.yml
 log_file: /var/log/cldstr+wagn.org+wagn+ws/${appconfig.appconfigid}.log
 smtp:
